# rusty-experiments

./: README.md
hunter/: Cargo.toml  README.md
hunter/lib/: mod.rs
hunter/lib/passive/: mod.rs  subdomain.rs
hunter/src/: main.rs
random-number-guesser/: Cargo.toml
random-number-guesser/src/: main.rs
