[package]
name = "hunter"
version = "0.1.0"
edition = "2021"
authors = ["s4dr0t1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }


[lib]
name = "recon"
path = "lib/mod.rs"
